# PyCalc

./: Makefile  README.md  pyproject.toml
calc/: main.py
