[tool.poetry]
name = "calc"
version = "0.1.0"
description = "Basic TUI calculator in python"
authors = ["Dominic Adamson <adamson.dom@gmail.com>"]
license = "GPL 3"
readme = "README.md"
homepage = ""
repository = "https://github.com/destroyer449/PyCalc"
documentation = ""

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.21.0"
pytest = "^6.2.2"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "main:main"
